# refined-claude

./: .env.example  .eslintrc.js  .gitignore  .gitmodules  .prettierignore  ICON_REORGANIZATION_README.md  README.md  codemcp.toml  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  prettier.config.example.json  pyproject.toml  tsconfig.base.json  tsconfig.json  tsup.config.ts  turbo.json  vitest.config.ts
.github/workflows/: ci.yml
refined_claude/: accessibility.py  accessibility_api.py  cli.py  fake_accessibility.py  features.py  logging.py  parsing.py  snapshot.py  storage.py  ui.py
scripts/: build-extension.js
src/: index.ts  manifest.debug.json  manifest.json  manifest.release.json  popup.html  rules.ts
src/__tests__/: pageStateMatcher.test.ts
src/extension/: background.ts  manifest.json
src/matchers/: index.ts  pageStateMatcher.ts
src/observers/: responseStateObserver.ts
src/utils/: rrwebPlayer.ts
test/: index.test.ts
test/rrweb-headless/: README.md  package.json  tsup.config.ts  vitest.config.ts  vitest.e2e.config.ts
test/rrweb-headless/src/: cli.ts  index.ts  server.ts
tests/: test_auto_approve.py  test_auto_approve_edge_case.py  test_auto_continue.py  test_cli_structure.py  test_cli_warning.py  test_fake_accessibility.py  test_once_only_warning.py  test_thread_safety.py
